--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,22 @@
 {
     "cSpell.words": [
         "aboutus",
+        "Akram",
+        "Benbouabdallah",
+        "Boulkenafet",
         "contactus",
+        "deidara",
         "DEVERA",
-        "topbar"
+        "Islem",
+        "itachi",
+        "kakuzu",
+        "Khaled",
+        "madara",
+        "obito",
+        "potencial",
+        "Sami",
+        "Soualem",
+        "topbar",
+        "Zahreddine"
     ]
 }
